--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,7 @@
 body{
     font-family: 'Manrope', sans-serif;
 }
+
+.linear-gradient{
+    background: linear-gradient(180deg, #F4F4F4 0%, rgba(244, 244, 244, 0.00) 100%);
+}
